--- a/package.json
+++ b/package.json
@@ -27,10 +27,10 @@
     "fast"
   ],
   "dependencies": {
+    "node-buffer-encoding": "^1.0.1",
     "uint8-encoding": "^2.0.0"
   },
   "devDependencies": {
-    "@types/node": "^17.0.23",
     "benchloop": "^1.3.2",
     "fast-check": "^2.24.0",
     "fava": "^0.0.6",
