--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "hex-encoding",
   "repository": "github:fabiospampinato/hex-encoding",
   "description": "Hex encoding. An extremely fast and synchronous JS implementation.",
+  "license": "MIT",
   "version": "2.0.2",
   "type": "module",
   "main": "dist/node.js",
@@ -28,14 +29,14 @@
     "fast"
   ],
   "dependencies": {
-    "node-buffer-encoding": "^1.0.1",
-    "uint8-encoding": "^2.0.0"
+    "node-buffer-encoding": "^1.0.3",
+    "uint8-encoding": "^2.0.1"
   },
   "devDependencies": {
-    "benchloop": "^2.1.0",
-    "fast-check": "^3.12.0",
-    "fava": "^0.2.1",
-    "tsex": "^3.0.1",
-    "typescript": "^5.1.6"
+    "benchloop": "^2.1.1",
+    "fast-check": "^3.23.2",
+    "fava": "^0.3.4",
+    "tsex": "^4.0.2",
+    "typescript": "^5.7.3"
   }
 }
